# LCSAssignment-2_part-2

./: CMakeLists.txt  README.md  main.cpp
AndElimination/: AndElimin.cpp  AndElimin.h
AndIntroduction/: AndIntro.cpp  AndIntro.h
Documentation/: HomePage.html  Test_Case-1.html  Test_Case-2.html  Test_Case-3.html  Test_Case-4.html  Test_Case-5.html  _and_elimin_8cpp.html  _and_elimin_8h.html  _and_elimin_8h_source.html  _and_intro_8cpp.html  _and_intro_8cpp_source.html  _and_intro_8h.html  _implic_elimin_8cpp.html  _implic_elimin_8cpp_source.html  _implic_elimin_8h.html  _implic_elimin_8h_source.html  _infix_postfix_8cpp.html  _infix_postfix_8cpp_source.html  _infix_postfix_8h.html  _infix_postfix_8h_source.html  _modus_tollens_8cpp.html  _modus_tollens_8cpp_source.html  _modus_tollens_8h_source.html  _or_intro_8cpp.html  _postfix_parse_tree_8cpp.html  _postfix_parse_tree_8cpp_source.html  _postfix_parse_tree_8h.html  _premise_checker_8cpp.html  _premise_checker_8cpp_source.html  _premise_checker_8h.html  _premise_checker_8h_source.html  _tree_infix_8cpp_source.html  _tree_infix_8h_source.html  annotated.html  annotated_dup.js  class_and_elimin.html  class_and_intro.html  class_and_intro.js  class_implic_elimin.html  class_implic_elimin.js  (+46 more)
ImplicationElimination/: ImplicElimin.cpp  ImplicElimin.h  ImplicIntro.cpp  ImplicIntro.h
ModusTollens/: ModusTollens.cpp  ModusTollens.h
Observations/: Test_Case-1.html  Test_Case-2.html  Test_Case-3.html  Test_Case-4.html  Test_Case-5.html
OrIntroduction/: OrIntro.cpp  OrIntro.h
PremiseChecker/: PremiseChecker.cpp  (+1 more)
(+108 files in other folders)
